<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:padding="@dimen/gutter"
    android:scrollbars="none"
    tools:context="com.sumir.silent.MainActivity">

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/select_mode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/textPadding"
                android:background="@color/colorPrimaryLight"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimaryText"
                android:text="@string/selectMode"
                />
                <android.support.v7.widget.CardView
                    xmlns:android="http://schemas.android.com/apk/res/android"
                    android:id="@+id/card_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:elevation="8dp"
                    android:layout_marginBottom="@dimen/marginBottom"
                    android:layout_marginTop="@dimen/marginTop"
                    android:layout_below="@id/select_mode"
                    android:layout_centerHorizontal="true"
                    card_view:cardCornerRadius="0dp">
                    <RelativeLayout
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:padding="8dp">
                        <ImageView
                            android:id="@+id/ringer_on"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:foreground="?android:attr/selectableItemBackground"
                            android:src="@drawable/ringer_on"
                            android:layout_alignParentStart="true"
                            android:contentDescription="@string/ringon" />
                        <ImageView
                            android:id="@+id/ringer_off"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:foreground="?android:attr/selectableItemBackground"
                            android:src="@drawable/ringer_off"
                            android:layout_centerHorizontal="true"
                            android:contentDescription="@string/silent" />
                        <ImageView
                            android:id="@+id/ringer_vibrate"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:foreground="?android:attr/selectableItemBackground"
                            android:src="@drawable/ringer_vibrate"
                            android:layout_alignParentEnd="true"
                            android:contentDescription="@string/vibrate" />

                    </RelativeLayout>
                </android.support.v7.widget.CardView>

                <TextView
                    android:id="@+id/setLevel"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:padding="8dp"
                    android:background="@color/colorPrimaryLight"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_below="@+id/card_view"
                    android:layout_marginTop="@dimen/marginTop"
                    android:layout_alignParentStart="true"
                    android:textColor="@color/colorPrimaryText"
                    android:text="@string/selectLevel"
                    />

                <android.support.v7.widget.CardView
                    xmlns:android="http://schemas.android.com/apk/res/android"
                    android:id="@+id/card_view_two"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:elevation="8dp"
                    android:layout_marginBottom="@dimen/marginBottom"
                    android:layout_marginTop="@dimen/marginTop"
                    android:layout_below="@+id/setLevel"
                    android:layout_centerHorizontal="true"
                    card_view:cardCornerRadius="0dp">
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="8dp">

                        <TextView
                            android:id="@+id/voice"
                            android:layout_height="wrap_content"
                            android:layout_width="wrap_content"
                            android:textSize="13sp"
                            android:textColor="@color/colorPrimaryText"
                            android:text="@string/voice"
                            android:layout_alignParentStart="true"
                            android:layout_alignParentTop="true"
                            />
                        <SeekBar
                            android:id="@+id/voiceControl"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/marginTop"
                            android:layout_marginBottom="@dimen/marginBottom"
                            android:layout_below="@id/voice"
                            android:layout_centerHorizontal="true"
                            />

                        <TextView
                            android:id="@+id/music"
                            android:layout_height="wrap_content"
                            android:layout_width="wrap_content"
                            android:textSize="13sp"
                            android:textColor="@color/colorPrimaryText"
                            android:text="@string/music"
                            android:layout_alignParentStart="true"
                            android:layout_below="@id/voiceControl"
                            />
                        <SeekBar
                            android:id="@+id/musicControl"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/marginTop"
                            android:layout_marginBottom="@dimen/marginBottom"
                            android:layout_below="@id/music"
                            android:layout_centerHorizontal="true"
                            />

                        <TextView
                                android:id="@+id/ringer"
                                android:layout_height="wrap_content"
                                android:layout_width="wrap_content"
                                android:textSize="13sp"
                                android:textColor="@color/colorPrimaryText"
                                android:text="@string/ringer"
                                android:layout_alignParentStart="true"
                                android:layout_below="@id/musicControl"
                            />
                        <SeekBar
                            android:id="@+id/ringerControl"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/marginTop"
                            android:layout_marginBottom="@dimen/marginBottom"
                            android:layout_below="@id/ringer"
                            android:layout_centerHorizontal="true"
                            />

                        <TextView
                            android:id="@+id/alarm"
                            android:layout_height="wrap_content"
                            android:layout_width="wrap_content"
                            android:textSize="13sp"
                            android:textColor="@color/colorPrimaryText"
                            android:text="@string/alarm"
                            android:layout_alignParentStart="true"
                            android:layout_below="@id/ringerControl"
                            />
                        <SeekBar
                            android:id="@+id/alarmControl"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/marginTop"
                            android:layout_marginBottom="@dimen/marginBottom"
                            android:layout_below="@+id/alarm"
                            android:layout_centerHorizontal="true"
                            />

                    </RelativeLayout>

                </android.support.v7.widget.CardView>
        </RelativeLayout>

</ScrollView>
